--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -28,9 +28,6 @@ android {
     namespace "com.mix1009.dropbox_example"
     compileSdk 33
 
-    lintOptions {
-        disable 'InvalidPackage'
-    }
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
@@ -49,6 +46,9 @@ android {
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
         }
+    }
+    lint {
+        disable 'InvalidPackage'
     }
 }
 
